# Incrementality-Project-

./: .gitignore  ARCHITECTURE.md  PRODUCT_SPEC.md  README.md  TESTING_STRATEGY.md  railway.toml
backend/: .coverage  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  railway.toml  railway.worker.toml  setup.cfg  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_narrative_results.py
backend/app/: main.py
backend/app/api/routes/: analysis.py  narrative.py  pdf.py  tests.py  uploads.py
backend/app/core/: arq_pool.py  auth.py  config.py
backend/app/db/: base.py  session.py
backend/app/jobs/: analysis_pipeline.py
backend/app/models/: workspace.py
backend/app/schemas/: analysis_schemas.py  narrative_schemas.py  test_schemas.py  upload_schemas.py
backend/app/templates/: report.html.jinja2
backend/db/migrations/: 001_initial_schema.sql
backend/scripts/: seed_workspace.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_analysis.py  test_narrative.py  test_pdf.py  test_tests.py  test_uploads.py
backend/tests/ingestion/: test_column_mapping.py  test_csv_validation.py  test_region_normalization.py
backend/tests/jobs/: test_analysis_pipeline.py
backend/tests/llm/: test_narrative.py
backend/tests/security/: conftest.py  test_rls_policies.py
backend/tests/statistical/: conftest.py  test_bootstrap_roas.py  test_cell_assignment.py  test_feature_engineering.py  test_kmeans_clustering.py  test_parallel_trends.py  test_power_analysis.py  test_pretrend_adjustment.py  test_reconciled_incrementality.py  test_simple_did.py  test_twfe_did.py  test_yoy_analysis.py
(+78 files in other folders)
